# AR-OMX

./: README.md  auto1.sh  auto2.sh
src/: readme.md
src/my_service_package/: CMakeLists.txt  package.xml
src/my_service_package/msg/: RmseMetrics.msg  RotPos.msg  TeleopMetric.msg  VelPos.msg
src/my_service_package/srv/: EndeffectorVelservice.srv  FloatPos (copy).srv  IKservice.srv  JointVelservice.srv
src/omx_position_control/: package.xml  setup.cfg  setup.py
src/omx_position_control/launch/: evaluation.launch.py  master_evaluation.launch.py  position_control.launch.py  position_control2.launch.py
src/omx_position_control/omx_position_control/: basic_robot_control.py  basic_robot_control2.py  forward_kinematics.py  inverse_kinematics_node (copy).py  inverse_kinematics_node.py  master_evaluator_node.py  realtime_control_node.py  rmse_evaluator.py  trajectory_evaluator.py  websocket_bridge_node.py  websocket_bridge_node2.py
src/robot_arm/: package.xml  setup.py
src/robot_arm/launch/: realtime_control.launch.py
src/robot_arm/robot_arm/: basic_robot_control.py  forward_kinematics.py  incremental_joint_control.py  inverse_kinematics_node (copy).py  inverse_kinematics_node.py  pick_up_client (copy).py  pick_up_client (pos+vel).py  pick_up_client (position).py  pick_up_client (works fine).py  realtime_control_node.py  velocity_kinematics.py  websocket_bridge_node.py
src/teleop_omx/: package.xml  setup.cfg  setup.py
src/teleop_omx/launch/: websocket_robot_control.launch.py
src/tutorial_interfaces/: CMakeLists.txt  package.xml
(+13 files in other folders)
